[gd_scene load_steps=4 format=3 uid="uid://di0adffyo1dxm"]

[ext_resource type="Script" path="res://UI/health_ui.gd" id="1_k4amn"]
[ext_resource type="Texture2D" uid="uid://cfcxpgwwpi2ak" path="res://UI/HeartUIEmpty.png" id="2_w7621"]
[ext_resource type="Texture2D" uid="uid://bqylctvjs6nl1" path="res://UI/HeartUIFull.png" id="3_u4xfs"]

[node name="HealthUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 11.0
script = ExtResource("1_k4amn")

[node name="HeartUIEmpty" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 60.0
offset_bottom = 11.0
texture = ExtResource("2_w7621")
stretch_mode = 1

[node name="HeartUIFull" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 45.0
offset_bottom = 11.0
texture = ExtResource("3_u4xfs")
expand_mode = 1
stretch_mode = 1

[node name="BatCounter" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_right = 127.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 12
text = "Bats: ?"
